# Snake-Variations

./: .gitignore  CMakeLists.txt  README.md  box_general.c  box_general.h  game_cutscenes.c  game_state0.c  game_state0.h  game_state1.c  game_state1.h  game_state2.c  game_state2.h  game_state3.c  game_state4.c  game_state_Attack.c  game_state_OpenWorld.c  game_state_OpenWorld.h  game_state_Seeker.c  game_state_Seeker.h  game_state_StaticPlatformer.c  game_state_StaticPlatformer.h  game_state_Suicide.c  game_state_Suicide.h  game_state_YouFood.c  game_state_YouFood.h  game_state_maze.c  game_state_maze.h  index.html  level_declarations.h  main.c  maze_stuff.c  maze_stuff.h  my_project.js  my_project.wasm  player_related.c  player_related.h  seeker_snake.h  shell.html  snake_pather.c  snake_pather.h  (+2 more)
.github/workflows/: cmake.yml
src/: allocator.c  allocator.h  box_general.c  box_general.h  box_maze0_stuff.c  box_maze0_stuff.h  game.c  game.h  game_cutscenes.c  game_cutscenes.h  game_state0.c  game_state0.h  game_state1.c  game_state1.h  game_state2.c  game_state2.h  game_state3.c  game_state3.h  game_state4.c  game_state4.h  game_state_Accel.c  game_state_Accel.h  game_state_Attack.c  game_state_Attack.h  game_state_Ending.c  game_state_Ending.h  game_state_FallFood.c  game_state_FallFood.h  game_state_Final.c  game_state_Final.h  game_state_InZoom.c  game_state_InZoom.h  game_state_ObsCourse.c  game_state_ObsCourse.h  game_state_OnceMaze.c  game_state_OnceMaze.h  game_state_OpenWorld.c  game_state_OpenWorld.h  game_state_Seeker.c  game_state_Seeker.h  (+27 more)
